--- a/imkit/src/main/res/layout/chat_container_center.xml
+++ b/imkit/src/main/res/layout/chat_container_center.xml
@@ -19,5 +19,25 @@
 
     </FrameLayout>
 
+    <ImageView
+        android:id="@+id/flag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignBottom="@+id/content"
+        android:layout_marginBottom="4dp"
+        android:visibility="gone"
+        android:src="@drawable/msg_status_send_error" />
+
+
+    <ProgressBar
+        android:id="@+id/sending_progress_bar"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignBottom="@+id/content"
+        android:layout_marginBottom="4dp"
+        android:visibility="gone" />
+
 
 </RelativeLayout>
